added errors + styling for login and signup

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 
   <body>
     <%= render 'layouts/nav' %>
+    <%= render 'layouts/errors' %>
     <% if user_signed_in? %>
       <div class="row">
         <div class="col-lg-2">
