--- a/app/views/layouts/_errors.html.erb
+++ b/app/views/layouts/_errors.html.erb
@@ -1,10 +1,14 @@
 <div class="container">
     <% if !flash.empty? %>
-    <div id="error_explanation" class="alert alert-danger alert-dismissible" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <%- flash.each do |name, msg| -%>
-            <li id="flash_<%= name %>"><%= msg %></li>
-        <%- end -%>
-    </div>
+            <% if name == "notice" %>
+                <div id="error_explanation" class="alert alert-warning alert-dismissible" role="alert">
+            <% else %>
+                <div id="error_explanation" class="alert alert-danger alert-dismissible" role="alert">
+            <% end %>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <li id="flash_<%= name %>"><%= msg %></li>
+            <%- end -%>
+        </div>
     <% end %>
 </div>
