--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,4 +1,7 @@
 <ul class="list-group">
+  <%= link_to edit_user_path(current_user.slug), class: "list-group-item btn btn-default btn-lg" do %>
+    <li class="text-center">Edit Profile</li>
+  <% end %>
   <a href="#" class="list-group-item btn btn-default btn-lg"><li class="text-center">Create Budget</li></a>
   <a href="#" class="list-group-item btn btn-default btn-lg"><li class="text-center">Budget List</li></a>
   <a href="#" class="list-group-item btn btn-default btn-lg"><li class="text-center">Categories</li></a>
