--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -2,8 +2,12 @@
   <%= link_to edit_user_path(current_user.slug), class: "list-group-item btn btn-default btn-lg" do %>
     <li class="text-center">Edit Profile</li>
   <% end %>
-  <a href="#" class="list-group-item btn btn-default btn-lg"><li class="text-center">Create Budget</li></a>
-  <a href="#" class="list-group-item btn btn-default btn-lg"><li class="text-center">Budget List</li></a>
+  <%= link_to new_user_budget_path(current_user.slug), class: "list-group-item btn btn-default btn-lg" do %>
+    <li class="text-center">Create Budget</li>
+  <% end %>
+  <%= link_to user_budgets_path(current_user.slug), class: "list-group-item btn btn-default btn-lg" do %>
+    <li class="text-center">Budget List</li>
+  <% end %>
   <a href="#" class="list-group-item btn btn-default btn-lg"><li class="text-center">Categories</li></a>
   <a href="#" class="list-group-item btn btn-default btn-lg"><li class="text-center">Finances</li></a>
 </ul>
