--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,12 +1,14 @@
 <ul class="list-group">
-  <%= link_to edit_user_path(current_user.slug), class: "list-group-item btn btn-default btn-lg" do %>
+  <%= link_to edit_user_path(current_user), class: "list-group-item btn btn-default btn-lg" do %>
     <li class="text-center">Edit Profile</li>
   <% end %>
-  <%= link_to new_user_budget_path(current_user.slug), class: "list-group-item btn btn-default btn-lg" do %>
+  <%= link_to new_user_budget_path(current_user), class: "list-group-item btn btn-default btn-lg" do %>
     <li class="text-center">Create Budget</li>
   <% end %>
-  <%= link_to user_budgets_path(current_user.slug), class: "list-group-item btn btn-default btn-lg" do %>
+  <%= link_to user_budgets_path(current_user), class: "list-group-item btn btn-default btn-lg" do %>
     <li class="text-center">Budget List</li>
   <% end %>
-  <a href="#" class="list-group-item btn btn-default btn-lg"><li class="text-center">Categories</li></a>
+  <%= link_to user_categories_path(current_user), class: "list-group-item btn btn-default btn-lg" do %>
+    <li class="text-center">Categories</li>
+  <% end %>
 </ul>
