--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "Budget Planner", root_path, class: "navbar-brand" %>
+      <%= link_to "Budget Maker", root_path, class: "navbar-brand" %>
     </div>
     
     <ul class="nav navbar-nav navbar-right">
