--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -13,6 +13,16 @@
     <table class="table table-striped table-bordered table-hover">
         <thead>
             <th>#</th>
+            <th>Medical</th>
+        </thead>
+        <tbody>
+            
+        </tbody>
+    </table>
+
+    <table class="table table-striped table-bordered table-hover">
+        <thead>
+            <th>#</th>
             <th>Groceries</th>
         </thead>
         <tbody>
